# RL_HMesh

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements.txt  系统架构图(mermaid).txt
TopoHexMeshLib_sheet_singularity/: TopoHexMeshLib_viewer.sln
TopoHexMeshLib_sheet_singularity/HMeshLib/algorithm/metric/: MetricTMesh.h
TopoHexMeshLib_sheet_singularity/HMeshLib/algorithm/viewer/: ViewerTMesh.h
TopoHexMeshLib_sheet_singularity/HMeshLib/core/Geometry/: Circle.h  Hyperbolic.H  HyperbolicCircle.h  Line2D.h  Plane.h  Point.h  Point2.H  quat.h
TopoHexMeshLib_sheet_singularity/HMeshLib/core/HexMesh/: basehmesh.h  edge.h  face.h  halfedge.h  halfface.h  hedge.h  hex.h  hexmesheditor.h  hiterators.h  hvertex.h  vertex.h
TopoHexMeshLib_sheet_singularity/HMeshLib/core/Parser/: parser.h
TopoHexMeshLib_sheet_singularity/HMeshLib/core/Topology/: TopoE.h  TopoF.h  TopoH.h  TopoIterator.h  TopoM.h  TopoOperation.h  TopoV.h
TopoHexMeshLib_sheet_singularity/HMeshLib/core/bmp/: RgbImage.cpp
TopoHexMeshLib_sheet_singularity/HMeshLib/core/viewer/: Arcball.h
TopoHexMeshLib_sheet_singularity/TopoHexMeshLib_viewer/: Agent.cpp  Agent.h  Model.h  TopoHexMeshLib_viewer.args.json  TopoHexMeshLib_viewer.vcxproj  TopoHexMeshLib_viewer.vcxproj.filters  settings.cpp  settings.h
TopoHexMeshLib_sheet_singularity/TopoHexMeshLib_viewer/x64/Release/: TopoHexMeshLib_viewer.exe.recipe  TopoHexMeshLib_viewer.ipdb
TopoHexMeshLib_sheet_singularity/_vs/TopoHexMeshLib_viewer/FileContentIndex/: 068ee25d-4801-4022-b56d-8607df48a739.vsidx  46a85e66-31e6-40e1-b765-64354ec4f7b8.vsidx  7cdc07d4-785f-4187-ab25-07ee68ad48b1.vsidx
TopoHexMeshLib_sheet_singularity/_vs/TopoHexMeshLib_viewer/v17/: DocumentLayout.json  Solution.VC.db  _suo
TopoHexMeshLib_sheet_singularity/src/: insert_mesh.h  meshQuality.h  sheet_operation.h  singularity_number.h  state_functions.h  tools.h  topoMesh.h
TopoHexMeshLib_sheet_singularity/x64/Release/: TopoHexMeshLib_viewer.exp  TopoHexMeshLib_viewer.lib
python_modules/: agent.py  convert_mesh2Qhex.py  network.py  simplified_network.py  test.py  testPybind.cpp  utils.py
setup/1/: bolt_hex_1.hh.sat_GA_processed.Qhex  bolt_hex_1.hh.sat_processed.Qhex  thin_wall_1.hh.sat_octree_GA_processed.Qhex  thin_wall_1.hh.sat_octree_processed.Qhex  training_config_1.md
(+9 files in other folders)
